syntax = "proto3";

package category;

service Categories {
    rpc GetCategoryByPage (Request) returns (Response) {
    }
    rpc Exist (Request) returns (Response) {
    }
    rpc Save (Request) returns (Response) {
    }
    rpc Update (Request) returns (Response) {
    }
    rpc Delete (Request) returns (Response) {
    }
    rpc GetCategoryById (Request) returns (Response) {
    }
    rpc GetCategories4Search (Request) returns (Response) {
    }
//    rpc SelectByLevelAndParentIdsAndNumber (Request) returns (Response) {
//    }
}

message Category {
    int64 id = 1;
    string category_id = 2;
    string category_level = 3;
    string parent_id = 4;
    string category_name = 5;
    string category_rank = 6;
    string is_deleted = 7;
    string created_at = 8;
    string updated_at = 9;
    string category_ids = 10;
}

message ListQuery {
    int64 limit = 1; // 返回数量
    int64 page = 2; // 页面
    string sort = 3; // 排序
    string where = 4; // 查询条件
}

message Request {
    ListQuery list_query = 1; // 列表分页请求
    Category category = 2; // 用户
}

message Response {
    bool valid = 1;
    int64 total = 2;
    Category category = 3;
    repeated Category category_list = 4;
}